// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: RadioGroup ui horizontal: Component: RadioGroup => ui => horizontal 1`] = `
<FormGroup
  className=""
  tag="fieldset"
>
  <legend>
    Subject
  </legend>
  <p
    className="text-muted"
  >
    <em>
      Please enter your subject
    </em>
  </p>
  <FormGroup
    check={true}
    inline={true}
    key="admin@42.nl"
    tag="div"
  >
    <Label
      check={true}
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Input
        checked={true}
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="admin@42.nl"
      />
       
      admin@42.nl
    </Label>
  </FormGroup>
  <FormGroup
    check={true}
    inline={true}
    key="coordinator@42.nl"
    tag="div"
  >
    <Label
      check={true}
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Input
        checked={false}
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="coordinator@42.nl"
      />
       
      coordinator@42.nl
    </Label>
  </FormGroup>
  <FormGroup
    check={true}
    inline={true}
    key="user@42.nl"
    tag="div"
  >
    <Label
      check={true}
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Input
        checked={false}
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="user@42.nl"
      />
       
      user@42.nl
    </Label>
  </FormGroup>
  Some error
</FormGroup>
`;

exports[`Component: RadioGroup ui with value: Component: RadioGroup => ui => with value 1`] = `
<FormGroup
  className=""
  tag="fieldset"
>
  <legend>
    Subject
  </legend>
  <p
    className="text-muted"
  >
    <em>
      Please enter your subject
    </em>
  </p>
  <FormGroup
    check={true}
    inline={false}
    key="admin@42.nl"
    tag="div"
  >
    <Label
      check={true}
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Input
        checked={true}
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="admin@42.nl"
      />
       
      admin@42.nl
    </Label>
  </FormGroup>
  <FormGroup
    check={true}
    inline={false}
    key="coordinator@42.nl"
    tag="div"
  >
    <Label
      check={true}
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Input
        checked={false}
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="coordinator@42.nl"
      />
       
      coordinator@42.nl
    </Label>
  </FormGroup>
  <FormGroup
    check={true}
    inline={false}
    key="user@42.nl"
    tag="div"
  >
    <Label
      check={true}
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Input
        checked={false}
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="user@42.nl"
      />
       
      user@42.nl
    </Label>
  </FormGroup>
  Some error
</FormGroup>
`;

exports[`Component: RadioGroup ui without label: Component: RadioGroup => ui => without label 1`] = `
<FormGroup
  className=""
  tag="fieldset"
>
  <p
    className="text-muted"
  >
    <em>
      Please enter your subject
    </em>
  </p>
  <FormGroup
    check={true}
    inline={false}
    key="admin@42.nl"
    tag="div"
  >
    <Label
      check={true}
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Input
        checked={true}
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="admin@42.nl"
      />
       
      admin@42.nl
    </Label>
  </FormGroup>
  <FormGroup
    check={true}
    inline={false}
    key="coordinator@42.nl"
    tag="div"
  >
    <Label
      check={true}
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Input
        checked={false}
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="coordinator@42.nl"
      />
       
      coordinator@42.nl
    </Label>
  </FormGroup>
  <FormGroup
    check={true}
    inline={false}
    key="user@42.nl"
    tag="div"
  >
    <Label
      check={true}
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Input
        checked={false}
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="user@42.nl"
      />
       
      user@42.nl
    </Label>
  </FormGroup>
  Some error
</FormGroup>
`;

exports[`Component: RadioGroup ui without placeholder: Component: RadioGroup => ui => without placeholder 1`] = `
<FormGroup
  className=""
  tag="fieldset"
>
  <legend>
    Subject
  </legend>
  <FormGroup
    check={true}
    inline={false}
    key="admin@42.nl"
    tag="div"
  >
    <Label
      check={true}
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Input
        checked={true}
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="admin@42.nl"
      />
       
      admin@42.nl
    </Label>
  </FormGroup>
  <FormGroup
    check={true}
    inline={false}
    key="coordinator@42.nl"
    tag="div"
  >
    <Label
      check={true}
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Input
        checked={false}
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="coordinator@42.nl"
      />
       
      coordinator@42.nl
    </Label>
  </FormGroup>
  <FormGroup
    check={true}
    inline={false}
    key="user@42.nl"
    tag="div"
  >
    <Label
      check={true}
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Input
        checked={false}
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="user@42.nl"
      />
       
      user@42.nl
    </Label>
  </FormGroup>
  Some error
</FormGroup>
`;
